Fixes #2295 - outline weirdness on DIVs caused by offscreen INPUT element. For page editor, put display:none on the offscreen INPUT

--- a/maqetta.core.client/WebContent/davinci/ve/resources/content.css
+++ b/maqetta.core.client/WebContent/davinci/ve/resources/content.css
@@ -202,3 +202,7 @@ body {
 .dijitDialogUnderlayWrapper {
 	display: none !important;
 }
+/* Overcome Firefox outline issue (#2295) */
+.dijitButton .dijitOffScreen {
+	display:none;
+}
